--- a/pages/hoan-tat.html
+++ b/pages/hoan-tat.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/hoan-tat.css">
-  <link rel="stylesheet" href="../asset/css/bootstrap.min.css">
-  <script src="../asset//js/bootstrap.bundle.min.js"></script>
-  <script src="../js/Trang_chu.js"></script>
-  <script src="../js/main.js"></script>
+  <link rel="stylesheet" href="../src/css/hoan-tat.css">
+  <link rel="stylesheet" href="../assets/libs/bootstrap/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <script src="../assets/libs/bootstrap/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../src/js/Trang_chu.js"></script>
+  <script src="../src/js/main.js"></script>
   <title>Hoàn tất đặt hàng</title>
 </head>
 
@@ -31,7 +31,7 @@
                 />
                 <button class="btn">
                   <img
-                    src="../character/search.svg"
+                    src="../assets/images/search.svg"
                     style="position: relative; top: -15%"
                     alt="search"
                   />
@@ -39,7 +39,7 @@
 
                 <div class="product-list" id="productList"  onclick="window.location.href='user-san-pham1.html';">
                   <div class="product">
-                    <img src="./img/CAY5.jpg" alt="Cây phát tài" />
+                    <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
                       <h3>750.000 vnđ</h3>
@@ -47,7 +47,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY6.jpg" alt="Cây kim ngân" />
+                    <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
                       <h3>280.000 vnđ</h3>
@@ -55,7 +55,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY7.jpg" alt="Cây trầu bà" />
+                    <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
                       <h3>120.000 vnđ</h3>
@@ -63,7 +63,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY8.jpg" alt="Cây lan chi" />
+                    <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
                       <h3>120.000 vnđ</h3>
@@ -71,7 +71,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                    <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
                       <h3>320.000 vnđ</h3>
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY10.jpg" alt="Cây lưỡi hổ" />
+                    <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
                       <h3>750.000 vnđ</h3>
@@ -87,7 +87,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                    <img src="../assets/images/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ vàng</h2>
                       <h3>160.000 vnđ</h3>
@@ -95,7 +95,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY12.jpg" alt="Cây hạnh phúc" />
+                    <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
                       <h3>1.200.000 vnđ</h3>
@@ -103,7 +103,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                    <img src="../assets/images/CAY13.jpg" alt="Cây trầu bà châu lớn" />
                     <div class="p-details">
                       <h2>Cây trầu bà châu lớn</h2>
                       <h3>1.100.000 vnđ</h3>
@@ -111,14 +111,14 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY14.jpg" alt="Cây phát tài DORADO" />
+                    <img src="../assets/images/CAY14.jpg" alt="Cây phát tài DORADO" />
                     <div class="p-details">
                       <h2>Cây phát tài DORADO</h2>
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY16.jpg" alt="Cây vạn lộc" />
+                    <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
                       <h3>1.150.000 vnđ</h3>
@@ -126,7 +126,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY17.jpg" alt="Cây ngọc vừng" />
+                    <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
                       <h3>1.750.000 vnđ</h3>
@@ -137,12 +137,12 @@
 
               <div class="cart-icon">
                 <a href="gio-hang.html"
-                  ><img src="../character/cart.svg" alt="cart"
+                  ><img src="../assets/images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="../character/user.svg" alt=""
+                  ><img src="../assets/images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -304,7 +304,7 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="../index.html"
-              ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+              ><img class="img-fluid" src="../assets/images/LOGO-2.png" alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -349,7 +349,7 @@
   <!-- SECTION  -->
   <div class="section">
     <div class="img-21">
-      <img src="../img/CAY21.jpg" alt="CAY21">
+      <img src="../assets/images/CAY21.jpg" alt="CAY21">
     </div>
   </div>
 
@@ -360,11 +360,11 @@
     </div>
     <div class="infor-order bg-light">
       <div class="status-order">
-        <img class="cart-2" src="../character/cart.svg" alt="cart">
+        <img class="cart-2" src="../assets/images/cart.svg" alt="cart">
         <hr>
-        <img src="../character/id-card.svg" class="id-01" alt="id-card">
+        <img src="../assets/images/id-card.svg" class="id-01" alt="id-card">
         <hr>
-        <img src="../character/circle-check.svg" class="id-02" alt="ccheck">
+        <img src="../assets/images/circle-check.svg" class="id-02" alt="ccheck">
       </div>
 
       <div class="noti-order-success">
@@ -404,7 +404,7 @@
   <footer>
     <div class="col-01">
       <div class="row-1">
-        <img src="../img/LOGO-2.png" alt="Logo final">
+        <img src="../assets/images/LOGO-2.png" alt="Logo final">
       </div>
 
       <div class="row-2">
@@ -429,11 +429,11 @@
         </div>
 
         <div class="icon-socialnet">
-          <img src="../character/facebook.svg" alt="facebook">
-          <img src="../character/instagram.svg" alt="instagram">
-          <img src="../character/youtube.svg" alt="youtube">
-          <img src="../character/mastercard.svg" alt="messenger">
-          <img src="../character/x-twitter.svg" alt="x">
+          <img src="../assets/images/facebook.svg" alt="facebook">
+          <img src="../assets/images/instagram.svg" alt="instagram">
+          <img src="../assets/images/youtube.svg" alt="youtube">
+          <img src="../assets/images/mastercard.svg" alt="messenger">
+          <img src="../assets/images/x-twitter.svg" alt="x">
         </div>
       </div>
 
@@ -444,8 +444,8 @@
           </div>
         </div>
         <div class="icon-socialnet">
-          <img src="../character/paypal.svg" alt="facebook">
-          <img src="../character/mastercard.svg" alt="instagram">
+          <img src="../assets/images/paypal.svg" alt="facebook">
+          <img src="../assets/images/mastercard.svg" alt="instagram">
         </div>
       </div>
     </div>
