--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
             <div class="item-header">
               <div class="search-group">
                 <input
-                  type="search"
+                  type="text"
                   placeholder="Tìm kiếm..."
                   id="searchInput"
                   style="position: relative; left: 15%"
