change path files user

--- a/pages/ho-so.html
+++ b/pages/ho-so.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../src/css/ho-so.css">
-  <link rel="stylesheet" href="../assets/libs/bootstrap/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-  <script src="../assets/libs/bootstrap/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../src/js/Trang_chu.js"></script>
   <script src="../src/js/main.js"></script>
   <title>Giỏ hàng</title>
@@ -39,7 +39,7 @@
 
                 <div class="product-list" id="productList"  onclick="window.location.href='user-san-pham1.html';">
                   <div class="product">
-                    <img src="./img/CAY5.jpg" alt="Cây phát tài" />
+                    <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
                       <h3>750.000 vnđ</h3>
@@ -47,7 +47,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY6.jpg" alt="Cây kim ngân" />
+                    <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
                       <h3>280.000 vnđ</h3>
@@ -55,7 +55,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY7.jpg" alt="Cây trầu bà" />
+                    <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
                       <h3>120.000 vnđ</h3>
@@ -63,7 +63,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY8.jpg" alt="Cây lan chi" />
+                    <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
                       <h3>120.000 vnđ</h3>
@@ -71,7 +71,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                    <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
                       <h3>320.000 vnđ</h3>
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY10.jpg" alt="Cây lưỡi hổ" />
+                    <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
                       <h3>750.000 vnđ</h3>
@@ -87,7 +87,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                    <img src="../assets/images/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ vàng</h2>
                       <h3>160.000 vnđ</h3>
@@ -95,7 +95,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY12.jpg" alt="Cây hạnh phúc" />
+                    <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
                       <h3>1.200.000 vnđ</h3>
@@ -103,7 +103,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                    <img src="../assets/images/CAY13.jpg" alt="Cây trầu bà châu lớn" />
                     <div class="p-details">
                       <h2>Cây trầu bà châu lớn</h2>
                       <h3>1.100.000 vnđ</h3>
@@ -111,14 +111,14 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY14.jpg" alt="Cây phát tài DORADO" />
+                    <img src="../assets/images/CAY14.jpg" alt="Cây phát tài DORADO" />
                     <div class="p-details">
                       <h2>Cây phát tài DORADO</h2>
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY16.jpg" alt="Cây vạn lộc" />
+                    <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
                       <h3>1.150.000 vnđ</h3>
@@ -126,7 +126,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY17.jpg" alt="Cây ngọc vừng" />
+                    <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
                       <h3>1.750.000 vnđ</h3>
@@ -250,16 +250,16 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html">Cây dễ chăm</a>
+                          <a class="dropdown-item" href="../pages/phan-loai1.html">Cây dễ chăm</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html">Cây văn phòng</a>
+                          <a class="dropdown-item" href="../pages/phan-loai1.html">Cây văn phòng</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html">Cây để bàn</a>
+                          <a class="dropdown-item" href="../pages/phan-loai1.html">Cây để bàn</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html">Cây dưới nước</a>
+                          <a class="dropdown-item" href="../pages/phan-loai1.html">Cây dưới nước</a>
                         </li>
                       </ul>
                     </li>
@@ -304,7 +304,6 @@
             <li>
               <a
                 href="../index.html"
-                ```````````````````````````````````````````
                 style="font-weight: bold"
                 >Trang chủ</a
               >
@@ -322,10 +321,10 @@
                   Sản phẩm
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="phan-loai1.html">Cây dễ chăm</a></li>
-                  <li><a class="dropdown-item" href="phan-loai1.html">Cây văn phòng</a></li>
-                  <li><a class="dropdown-item" href="phan-loai1.html">Cây để bàn</a></li>
-                  <li><a class="dropdown-item" href="phan-loai1.html">Cây dưới nước</a></li>
+                  <li><a class="dropdown-item" href="../pages/phan-loai1.html">Cây dễ chăm</a></li>
+                  <li><a class="dropdown-item" href="../pages/phan-loai1.html">Cây văn phòng</a></li>
+                  <li><a class="dropdown-item" href="../pages/phan-loai1.html">Cây để bàn</a></li>
+                  <li><a class="dropdown-item" href="../pages/phan-loai1.html">Cây dưới nước</a></li>
                 </ul>
               </div>
             </li>
