--- a/pages/hoan-tat.html
+++ b/pages/hoan-tat.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../src/css/hoan-tat.css">
-  <link rel="stylesheet" href="../assets/libs/bootstrap/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-  <script src="../assets/libs/bootstrap/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../src/js/Trang_chu.js"></script>
   <script src="../src/js/main.js"></script>
   <title>Hoàn tất đặt hàng</title>
@@ -314,7 +314,6 @@
             <li>
               <a
                 href="../index.html"
-                ```````````````````````````````````````````
                 style="font-weight: bold"
                 >Trang chủ</a
               >
@@ -381,7 +380,7 @@
         <hr style="border: 3px dashed green; width: 100%;">
         <div class="order">
           <div class="order-img">
-            <img src="../img/CAY5.jpg" alt="Phat tai">
+            <img src="../assets/images/CAY5.jpg" alt="Phat tai">
           </div>
           <div class="frame">
             <div class="name-price">
