--- a/pages/phan-loai2.html
+++ b/pages/phan-loai2.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" type="text/css" href="../css/phan-loai.css" />
-    <link rel="stylesheet" href="../asset/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/phan-loai.css" />
     <link
       rel="stylesheet"
-      href="../asset/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css"
+      href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/main.js"></script>
+    <link
+      rel="stylesheet"
+      href="../assets/libs/fontawesome-free-6.6.0-web/css/all.min.css"
+    />
+    <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/js/main.js"></script>
     <title>Phân loại</title>
   </head>
 
@@ -34,7 +37,7 @@
                 />
                 <button class="btn">
                   <img
-                    src="../character/search.svg"
+                    src="../assets/images/search.svg"
                     style="position: relative; top: -15%"
                     alt="search"
                   />
@@ -46,7 +49,7 @@
                   onclick="window.location.href='user-san-pham1.html';"
                 >
                   <div class="product">
-                    <img src="./img/CAY5.jpg" alt="Cây phát tài" />
+                    <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
                       <h3>750.000 vnđ</h3>
@@ -54,7 +57,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY6.jpg" alt="Cây kim ngân" />
+                    <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
                       <h3>280.000 vnđ</h3>
@@ -62,7 +65,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY7.jpg" alt="Cây trầu bà" />
+                    <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
                       <h3>120.000 vnđ</h3>
@@ -70,7 +73,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY8.jpg" alt="Cây lan chi" />
+                    <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
                       <h3>120.000 vnđ</h3>
@@ -78,7 +81,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                    <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
                       <h3>320.000 vnđ</h3>
@@ -86,7 +89,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY10.jpg" alt="Cây lưỡi hổ" />
+                    <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
                       <h3>750.000 vnđ</h3>
@@ -94,14 +97,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                    <img
+                      src="../assets/images/CAY11.jpg"
+                      alt="Cây lưỡi hổ vàng"
+                    />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ vàng</h2>
                       <h3>160.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY12.jpg" alt="Cây hạnh phúc" />
+                    <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
                       <h3>1.200.000 vnđ</h3>
@@ -109,7 +115,10 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                    <img
+                      src="../assets/images/CAY13.jpg"
+                      alt="Cây trầu bà châu lớn"
+                    />
                     <div class="p-details">
                       <h2>Cây trầu bà châu lớn</h2>
                       <h3>1.100.000 vnđ</h3>
@@ -117,14 +126,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY14.jpg" alt="Cây phát tài DORADO" />
+                    <img
+                      src="../assets/images/CAY14.jpg"
+                      alt="Cây phát tài DORADO"
+                    />
                     <div class="p-details">
                       <h2>Cây phát tài DORADO</h2>
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY16.jpg" alt="Cây vạn lộc" />
+                    <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
                       <h3>1.150.000 vnđ</h3>
@@ -132,7 +144,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY17.jpg" alt="Cây ngọc vừng" />
+                    <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
                       <h3>1.750.000 vnđ</h3>
@@ -143,12 +155,12 @@
 
               <div class="cart-icon">
                 <a href="gio-hang.html"
-                  ><img src="../character/cart.svg" alt="cart"
+                  ><img src="../assets/images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="../character/user.svg" alt=""
+                  ><img src="../assets/images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -321,7 +333,10 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="../index.html"
-              ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+              ><img
+                class="img-fluid"
+                src="../assets/images/LOGO-2.png"
+                alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -329,12 +344,7 @@
         <div class="choose">
           <ul>
             <li>
-              <a
-                href="../index.html"
-                ```````````````````````````````````````````
-                style="font-weight: bold"
-                >Trang chủ</a
-              >
+              <a href="../index.html" style="font-weight: bold">Trang chủ</a>
             </li>
             <li><a href="#">Giới thiệu</a></li>
             <li>
@@ -382,7 +392,7 @@
     <!-- SECTION  -->
     <div class="section">
       <div class="img-21">
-        <img src="../img/CAY21.jpg" alt="CAY21" />
+        <img src="../assets/images/CAY21.jpg" alt="CAY21" />
       </div>
     </div>
 
@@ -396,7 +406,7 @@
 
       <div class="pro-container">
         <div class="pro" onclick="window.location.href='user-san-pham1.html';">
-          <img src="../img/CAY5.jpg" alt="Cây phát tài" />
+          <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
           <div class="item_name__price">
             <p>CÂY PHÁT TÀI</p>
             <span>750.000 vnđ</span>
@@ -404,7 +414,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY6.jpg" alt="CÂY KIM NGÂN" />
+          <img src="../assets/images/CAY6.jpg" alt="CÂY KIM NGÂN" />
           <div class="item_name__price">
             <p>CÂY KIM NGÂN</p>
             <span>280.000 vnđ</span>
@@ -412,7 +422,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham1.html';">
-          <img src="../img/CAY7.jpg" alt="CÂY TRẦU BÀ" />
+          <img src="../assets/images/CAY7.jpg" alt="CÂY TRẦU BÀ" />
           <div class="item_name__price">
             <p>CÂY TRẦU BÀ</p>
             <span>120.000 vnđ</span>
@@ -420,7 +430,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY8.jpg" alt="CÂY LAN CHI" />
+          <img src="../assets/images/CAY8.jpg" alt="CÂY LAN CHI" />
           <div class="item_name__price">
             <p>CÂY LAN CHI</p>
             <span>120.000 vnđ</span>
@@ -428,7 +438,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham1.html';">
-          <img src="../img/CAY9.jpg" alt="ÂY TRẦU BÀ ĐỎ" />
+          <img src="../assets/images/CAY9.jpg" alt="ÂY TRẦU BÀ ĐỎ" />
           <div class="item_name__price">
             <p>CÂY TRẦU BÀ ĐỎ</p>
             <span>320.000 vnđ</span>
@@ -436,7 +446,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY10.jpg" alt="CÂY PHÁT TÀI" />
+          <img src="../assets/images/CAY10.jpg" alt="CÂY PHÁT TÀI" />
           <div class="item_name__price">
             <p>CÂY PHÁT TÀI</p>
             <span>750.000 vnđ</span>
@@ -444,7 +454,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham1.html';">
-          <img src="../img/CAY11.jpg" alt="CÂY LƯỠI HỔ VÀNG" />
+          <img src="../assets/images/CAY11.jpg" alt="CÂY LƯỠI HỔ VÀNG" />
           <div class="item_name__price">
             <p>CÂY LƯỠI HỔ VÀNG</p>
             <span>160.000 vnđ</span>
@@ -452,7 +462,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY12.jpg" alt="CÂY PHẠNH PHÚC" />
+          <img src="../assets/images/CAY12.jpg" alt="CÂY PHẠNH PHÚC" />
           <div class="item_name__price">
             <p>CÂY PHẠNH PHÚC</p>
             <span>1.200.000 vnđ</span>
@@ -460,7 +470,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham1.html';">
-          <img src="../img/CAY13.jpg" alt="CÂY TRẦU BÀ CHẬU LỚN" />
+          <img src="../assets/images/CAY13.jpg" alt="CÂY TRẦU BÀ CHẬU LỚN" />
           <div class="item_name__price">
             <p>CÂY TRẦU BÀ CHẬU LỚN</p>
             <span>1.100.000 vnđ</span>
@@ -468,7 +478,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY14.jpg" alt="CÂY PHÁT TÀI DORADO" />
+          <img src="../assets/images/CAY14.jpg" alt="CÂY PHÁT TÀI DORADO" />
           <div class="item_name__price">
             <p>CÂY PHÁT TÀI DORADO</p>
             <span>220.000 vnđ</span>
@@ -476,7 +486,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY16.jpg" alt="CÂY VẠN LỘC" />
+          <img src="../assets/images/CAY16.jpg" alt="CÂY VẠN LỘC" />
           <div class="item_name__price">
             <p>CÂY VẠN LỘC</p>
             <span>1.150.000 vnđ</span>
@@ -484,7 +494,7 @@
         </div>
 
         <div class="pro" onclick="window.location.href='user-san-pham2.html';">
-          <img src="../img/CAY17.jpg" alt="CÂY NGỌC VỪNG" />
+          <img src="../assets/images/CAY17.jpg" alt="CÂY NGỌC VỪNG" />
           <div class="item_name__price">
             <p>CÂY NGỌC VỪNG</p>
             <span>1.1750.000 vnđ</span>
@@ -518,7 +528,7 @@
     <footer>
       <div class="col-01">
         <div class="row-1">
-          <img src="../img/LOGO-2.png" alt="Logo final" />
+          <img src="../assets/images/LOGO-2.png" alt="Logo final" />
         </div>
 
         <div class="row-2">
@@ -548,11 +558,11 @@
           </div>
 
           <div class="icon-socialnet">
-            <img src="../character/facebook.svg" alt="facebook" />
-            <img src="../character/instagram.svg" alt="instagram" />
-            <img src="../character/youtube.svg" alt="youtube" />
-            <img src="../character/mastercard.svg" alt="messenger" />
-            <img src="../character/x-twitter.svg" alt="x" />
+            <img src="../assets/images/facebook.svg" alt="facebook" />
+            <img src="../assets/images/instagram.svg" alt="instagram" />
+            <img src="../assets/images/youtube.svg" alt="youtube" />
+            <img src="../assets/images/mastercard.svg" alt="messenger" />
+            <img src="../assets/images/x-twitter.svg" alt="x" />
           </div>
         </div>
 
@@ -565,8 +575,7 @@
             </div>
           </div>
           <div class="icon-socialnet">
-            <img src="../character/paypal.svg" alt="facebook" />
-            <img src="../character/mastercard.svg" alt="instagram" />
+            <img src="../assets/images/paypal.svg" alt="paypal" />
           </div>
         </div>
       </div>
