--- a/pages/thanh-toan.html
+++ b/pages/thanh-toan.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/thanh-toan.css" />
-    <link rel="stylesheet" href="../asset/css/bootstrap.min.css" />
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/Trang_chu.js"></script>
-    <script src="../js/main.js"></script>
+    <link rel="stylesheet" href="../src/css/thanh-toan.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
+    />
+    <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/js/Trang_chu.js"></script>
+    <script src="../src/js/main.js"></script>
     <title>Hoàn tất thanh toán</title>
   </head>
 
@@ -30,7 +33,7 @@
                 />
                 <button class="btn">
                   <img
-                    src="../character/search.svg"
+                    src="../assets/images/search.svg"
                     style="position: relative; top: -15%"
                     alt="search"
                   />
@@ -43,7 +46,7 @@
                 >
                   <div class="product">
                     <a href="user-san-pham1.html"
-                      ><img src="./img/CAY5.jpg" alt="Cây phát tài"
+                      ><img src="../assets/images/CAY5.jpg" alt="Cây phát tài"
                     /></a>
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
@@ -52,7 +55,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY6.jpg" alt="Cây kim ngân" />
+                    <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
                       <h3>280.000 vnđ</h3>
@@ -60,7 +63,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY7.jpg" alt="Cây trầu bà" />
+                    <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
                       <h3>120.000 vnđ</h3>
@@ -68,7 +71,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY8.jpg" alt="Cây lan chi" />
+                    <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
                       <h3>120.000 vnđ</h3>
@@ -76,7 +79,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                    <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
                       <h3>320.000 vnđ</h3>
@@ -84,7 +87,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY10.jpg" alt="Cây lưỡi hổ" />
+                    <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
                       <h3>750.000 vnđ</h3>
@@ -92,14 +95,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                    <img
+                      src="../assets/images/CAY11.jpg"
+                      alt="Cây lưỡi hổ vàng"
+                    />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ vàng</h2>
                       <h3>160.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY12.jpg" alt="Cây hạnh phúc" />
+                    <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
                       <h3>1.200.000 vnđ</h3>
@@ -107,7 +113,10 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                    <img
+                      src="../assets/images/CAY13.jpg"
+                      alt="Cây trầu bà châu lớn"
+                    />
                     <div class="p-details">
                       <h2>Cây trầu bà châu lớn</h2>
                       <h3>1.100.000 vnđ</h3>
@@ -115,14 +124,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY14.jpg" alt="Cây phát tài DORADO" />
+                    <img
+                      src="../assets/images/CAY14.jpg"
+                      alt="Cây phát tài DORADO"
+                    />
                     <div class="p-details">
                       <h2>Cây phát tài DORADO</h2>
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY16.jpg" alt="Cây vạn lộc" />
+                    <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
                       <h3>1.150.000 vnđ</h3>
@@ -130,7 +142,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY17.jpg" alt="Cây ngọc vừng" />
+                    <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
                       <h3>1.750.000 vnđ</h3>
@@ -141,12 +153,12 @@
 
               <div class="cart-icon">
                 <a href="gio-hang.html"
-                  ><img src="../character/cart.svg" alt="cart"
+                  ><img src="../assets/images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="../character/user.svg" alt=""
+                  ><img src="../assets/images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -178,22 +190,28 @@
                       <li class="nav-item">
                         <a
                           class="nav-link login-logout"
-                          href="user-register.html"
+                          href="../pages/user-register.html"
                           >Đăng kí</a
                         >
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link login-logout" href="user-login.html"
+                        <a
+                          class="nav-link login-logout"
+                          href="../pages/user-login.html"
                           >Đăng nhập</a
                         >
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link hs-ls-dx" href="ho-so.html">Hồ sơ</a>
+                        <a class="nav-link hs-ls-dx" href="../pages/ho-so.html"
+                          >Hồ sơ</a
+                        >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link hs-ls-dx" href="user-History.html"
+                        <a
+                          class="nav-link hs-ls-dx"
+                          href="../pages/user-History.html"
                           >Lịch sử mua hàng</a
                         >
                       </li>
@@ -267,22 +285,30 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html"
+                          <a
+                            class="dropdown-item"
+                            href="../pages/phan-loai1.html"
                             >Cây dễ chăm</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html"
+                          <a
+                            class="dropdown-item"
+                            href="../pages/phan-loai1.html"
                             >Cây văn phòng</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html"
+                          <a
+                            class="dropdown-item"
+                            href="../pages/phan-loai1.html"
                             >Cây để bàn</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="phan-loai1.html"
+                          <a
+                            class="dropdown-item"
+                            href="../pages/phan-loai1.html"
                             >Cây dưới nước</a
                           >
                         </li>
@@ -319,7 +345,10 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="../index.html"
-              ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+              ><img
+                class="img-fluid"
+                src="../assets/images/LOGO-2.png"
+                alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -327,12 +356,7 @@
         <div class="choose">
           <ul>
             <li>
-              <a
-                href="../index.html"
-                ```````````````````````````````````````````
-                style="font-weight: bold"
-                >Trang chủ</a
-              >
+              <a href="../index.html" style="font-weight: bold">Trang chủ</a>
             </li>
             <li><a href="#">Giới thiệu</a></li>
             <li>
@@ -348,22 +372,22 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="phan-loai1.html"
+                    <a class="dropdown-item" href="../pages/phan-loai1.html"
                       >Cây dễ chăm</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="phan-loai1.html"
+                    <a class="dropdown-item" href="../pages/phan-loai1.html"
                       >Cây văn phòng</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="phan-loai1.html"
+                    <a class="dropdown-item" href="../pages/phan-loai1.html"
                       >Cây để bàn</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="phan-loai1.html"
+                    <a class="dropdown-item" href="../pages/phan-loai1.html"
                       >Cây dưới nước</a
                     >
                   </li>
@@ -380,7 +404,7 @@
     <!-- SECTION  -->
     <div class="section">
       <div class="img-21">
-        <img src="../img/CAY21.jpg" alt="CAY21" />
+        <img src="../assets/images/CAY21.jpg" alt="CAY21" />
       </div>
     </div>
 
@@ -391,11 +415,11 @@
       </div>
       <div class="infor-order bg-light">
         <div class="status-order">
-          <img class="cart-2" src="../character/cart.svg" alt="cart" />
+          <img class="cart-2" src="../assets/images/cart.svg" alt="cart" />
           <hr />
-          <img src="../character/id-card.svg" class="id-01" alt="id-card" />
+          <img src="../assets/images/id-card.svg" class="id-01" alt="id-card" />
           <hr />
-          <img src="../character/circle-check.svg" alt="ccheck" />
+          <img src="../assets/images/circle-check.svg" alt="ccheck" />
         </div>
 
         <div class="enter-infor">
@@ -490,7 +514,7 @@
           <hr style="border: 3px dashed green; width: 100%" />
           <div class="order">
             <div class="order-img">
-              <img src="../img/CAY5.jpg" alt="Phat tai" />
+              <img src="../assets/images/CAY5.jpg" alt="Phat tai" />
             </div>
             <div class="frame">
               <div class="name-price">
@@ -507,7 +531,7 @@
                   data-bs-target="#exampleModal"
                   style="width: 53px"
                 >
-                  <img src="../character/trash.svg" alt="trash" />
+                  <img src="../assets/images/trash.svg" alt="trash" />
                 </button>
 
                 <!-- Modal -->
@@ -566,7 +590,7 @@
                       <span class="num">01</span>
                       <span class="plus">+</span>
                     </div>
-                    <script src="../js/san-pham.js"></script>
+                    <script src="../src/js/san-pham.js"></script>
                   </div>
                 </div>
               </div>
@@ -598,10 +622,10 @@
             />
             <img
               id="mastercard"
-              src="../character/mastercard.svg"
+              src="../assets/images/mastercard.svg"
               alt="mastercard"
             />
-            <img src="../character/visa.svg" alt="" />
+            <img src="../assets/images/visa.svg" alt="" />
           </div>
         </div>
 
@@ -634,7 +658,7 @@
     <footer>
       <div class="col-01">
         <div class="row-1">
-          <img src="../img/LOGO-2.png" alt="Logo final" />
+          <img src="../assets/images/LOGO-2.png" alt="Logo final" />
         </div>
 
         <div class="row-2">
@@ -664,11 +688,11 @@
           </div>
 
           <div class="icon-socialnet">
-            <img src="../character/facebook.svg" alt="facebook" />
-            <img src="../character/instagram.svg" alt="instagram" />
-            <img src="../character/youtube.svg" alt="youtube" />
-            <img src="../character/mastercard.svg" alt="messenger" />
-            <img src="../character/x-twitter.svg" alt="x" />
+            <img src="../assets/images/facebook.svg" alt="facebook" />
+            <img src="../assets/images/instagram.svg" alt="instagram" />
+            <img src="../assets/images/youtube.svg" alt="youtube" />
+            <img src="../assets/images/mastercard.svg" alt="messenger" />
+            <img src="../assets/images/x-twitter.svg" alt="x" />
           </div>
         </div>
 
@@ -681,8 +705,8 @@
             </div>
           </div>
           <div class="icon-socialnet">
-            <img src="../character/paypal.svg" alt="facebook" />
-            <img src="../character/mastercard.svg" alt="instagram" />
+            <img src="../assets/images/paypal.svg" alt="facebook" />
+            <img src="../assets/images/mastercard.svg" alt="instagram" />
           </div>
         </div>
       </div>
@@ -698,6 +722,6 @@
       </div>
       <!-- xong footer  -->
     </footer>
-    <script src="../js/thanh-toan.js"></script>
+    <script src="../src/js/thanh-toan.js"></script>
   </body>
 </html>
