--- a/pages/user-History.html
+++ b/pages/user-History.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" type="text/css" href="../css/User-History.css" />
-    <link rel="stylesheet" href="../asset/css/bootstrap.min.css" />
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/Trang_chu.js"></script>
+    <link rel="stylesheet" type="text/css" href="../src/css/User-History.css" />
     <link
       rel="stylesheet"
-      href="../asset/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css"
+      href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/js/Trang_chu.js"></script>
+    <link
+      rel="stylesheet"
+      href="../assets/libs/fontawesome-free-6.6.0-web/css/all.min.css"
+    />
+    <script src="../src/js/main.js"></script>
     <title>Lịch sử người dùng</title>
   </head>
 
@@ -36,7 +38,7 @@
                 />
                 <button class="btn">
                   <img
-                    src="../character/search.svg"
+                    src="../assets/images/search.svg"
                     style="position: relative; top: -15%"
                     alt="search"
                   />
@@ -44,7 +46,7 @@
 
                 <div class="product-list" id="productList">
                   <div class="product">
-                    <img src="../img/CAY5.jpg" alt="Cây phát tài" />
+                    <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
                       <h3>750.000 vnđ</h3>
@@ -52,7 +54,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY6.jpg" alt="Cây kim ngân" />
+                    <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
                       <h3>280.000 vnđ</h3>
@@ -60,7 +62,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY7.jpg" alt="Cây trầu bà" />
+                    <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
                       <h3>120.000 vnđ</h3>
@@ -68,7 +70,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY8.jpg" alt="Cây lan chi" />
+                    <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
                       <h3>120.000 vnđ</h3>
@@ -76,7 +78,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                    <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
                       <h3>320.000 vnđ</h3>
@@ -84,7 +86,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY10.jpg" alt="Cây lưỡi hổ" />
+                    <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
                       <h3>750.000 vnđ</h3>
@@ -92,14 +94,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                    <img
+                      src="../assets/images/CAY11.jpg"
+                      alt="Cây lưỡi hổ vàng"
+                    />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ vàng</h2>
                       <h3>160.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY12.jpg" alt="Cây hạnh phúc" />
+                    <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
                       <h3>1.200.000 vnđ</h3>
@@ -107,7 +112,10 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                    <img
+                      src="../assets/images/CAY13.jpg"
+                      alt="Cây trầu bà châu lớn"
+                    />
                     <div class="p-details">
                       <h2>Cây trầu bà châu lớn</h2>
                       <h3>1.100.000 vnđ</h3>
@@ -115,14 +123,17 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY14.jpg" alt="Cây phát tài DORADO" />
+                    <img
+                      src="../assets/images/CAY14.jpg"
+                      alt="Cây phát tài DORADO"
+                    />
                     <div class="p-details">
                       <h2>Cây phát tài DORADO</h2>
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
                   <div class="product">
-                    <img src="./img/CAY16.jpg" alt="Cây vạn lộc" />
+                    <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
                       <h3>1.150.000 vnđ</h3>
@@ -130,7 +141,7 @@
                   </div>
 
                   <div class="product">
-                    <img src="./img/CAY17.jpg" alt="Cây ngọc vừng" />
+                    <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
                       <h3>1.750.000 vnđ</h3>
@@ -141,12 +152,12 @@
 
               <div class="cart-icon">
                 <a href="./gio-hang.html"
-                  ><img src="../character/cart.svg" alt="cart"
+                  ><img src="../assets/images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="../character/user.svg" alt=""
+                  ><img src="../assets/images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -313,7 +324,10 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="../index.html"
-              ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+              ><img
+                class="img-fluid"
+                src="../assets/images/LOGO-2.png"
+                alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -321,12 +335,7 @@
         <div class="choose">
           <ul>
             <li>
-              <a
-                href="../index.html"
-                ```````````````````````````````````````````
-                style="font-weight: bold"
-                >Trang chủ</a
-              >
+              <a href="../index.html" style="font-weight: bold">Trang chủ</a>
             </li>
             <li><a href="#">Giới thiệu</a></li>
             <li>
@@ -374,7 +383,7 @@
     <!-- SECTION  -->
     <div class="section">
       <div class="img-21">
-        <img src="../img/CAY21.jpg" alt="CAY21" />
+        <img src="../assets/images/CAY21.jpg" alt="CAY21" />
       </div>
     </div>
 
@@ -414,7 +423,7 @@
       <h3 class="i-name-02">Lịch sử đặt hàng</h3>
 
       <div class="detail-orders">
-        <img src="../img/CAY5.jpg" alt="" />
+        <img src="../assets/images/CAY5.jpg" alt="" />
 
         <div class="detail">
           <div class="detail-product">
@@ -435,7 +444,7 @@
       </div>
 
       <div class="detail-orders">
-        <img src="../img/CAY6.jpg" alt="" />
+        <img src="../assets/images/CAY6.jpg" alt="" />
 
         <div class="detail">
           <div class="detail-product">
@@ -456,7 +465,7 @@
       </div>
 
       <div class="detail-orders">
-        <img src="../img/CAY7.jpg" alt="" />
+        <img src="../assets/images/CAY7.jpg" alt="" />
 
         <div class="detail">
           <div class="detail-product">
@@ -477,7 +486,7 @@
       </div>
 
       <div class="detail-orders">
-        <img src="../img/CAY8.jpg" alt="" />
+        <img src="../assets/images/CAY8.jpg" alt="" />
 
         <div class="detail">
           <div class="detail-product">
@@ -524,7 +533,7 @@
     <footer>
       <div class="col-01">
         <div class="row-1">
-          <img src="../img/LOGO-2.png" alt="Logo final" />
+          <img src="../assets/images/LOGO-2.png" alt="Logo final" />
         </div>
 
         <div class="row-2">
@@ -554,11 +563,11 @@
           </div>
 
           <div class="icon-socialnet">
-            <img src="../character/facebook.svg" alt="facebook" />
-            <img src="../character/instagram.svg" alt="instagram" />
-            <img src="../character/youtube.svg" alt="youtube" />
-            <img src="../character/mastercard.svg" alt="messenger" />
-            <img src="../character/x-twitter.svg" alt="x" />
+            <img src="../assets/images/facebook.svg" alt="facebook" />
+            <img src="../assets/images/instagram.svg" alt="instagram" />
+            <img src="../assets/images/youtube.svg" alt="youtube" />
+            <img src="../assets/images/mastercard.svg" alt="messenger" />
+            <img src="../assets/images/x-twitter.svg" alt="x" />
           </div>
         </div>
 
@@ -571,8 +580,8 @@
             </div>
           </div>
           <div class="icon-socialnet">
-            <img src="../character/paypal.svg" alt="facebook" />
-            <img src="../character/mastercard.svg" alt="instagram" />
+            <img src="../assets/images/paypal.svg" alt="facebook" />
+            <img src="../assets/images/mastercard.svg" alt="instagram" />
           </div>
         </div>
       </div>
