--- a/pages/user-register.html
+++ b/pages/user-register.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../asset/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="../css/user-register.css">
-  <script src="../asset/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../src/css/user-register.css">
+  <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
   <script></script>
   <script src="../js/main.js"></script>
@@ -33,7 +32,7 @@
               />
               <button class="btn">
                 <img
-                  src="../character/search.svg"
+                  src="../assets/images/search.svg"
                   style="position: relative; top: -15%"
                   alt="search"
                 />
@@ -138,12 +137,12 @@
 
             <div class="cart-icon">
               <a href="user-register.html"
-                ><img src="../character/cart.svg" alt="cart"
+                ><img src="../assets/images/cart.svg" alt="cart"
               /></a>
             </div>
             <div class="user-icon">
               <label for="tick" style="cursor: pointer"
-                ><img src="../character/user.svg" alt=""
+                ><img src="../assets/images/user.svg" alt=""
               /></label>
               <input
                 id="tick"
@@ -307,7 +306,7 @@
         <div class="brand-logo">
           <!-- Quay về trang chủ  -->
           <a href="../index.html"
-            ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+            ><img class="img-fluid" src="../assets/images/LOGO-2.png" alt="LOGO"
           /></a>
         </div>
         <div class="brand-name">THE TREE</div>
@@ -317,7 +316,6 @@
           <li>
             <a
               href="../index.html"
-              ```````````````````````````````````````````
               style="font-weight: bold"
               >Trang chủ</a
             >
@@ -354,7 +352,7 @@
   <!-- SECTION  -->
   <div class="section">
     <div class="img-21">
-      <img src="../img/CAY21.jpg" alt="CAY21">
+      <img src="../assets/images/CAY21.jpg" alt="CAY21">
     </div>
   </div>
 
@@ -445,7 +443,7 @@
   <footer>
     <div class="col-01">
       <div class="row-1">
-        <img src="../img/LOGO-2.png" alt="Logo final">
+        <img src="../assets/images/LOGO-2.png" alt="Logo final">
       </div>
 
       <div class="row-2">
@@ -470,11 +468,11 @@
         </div>
 
         <div class="icon-socialnet">
-          <img src="../character/facebook.svg" alt="facebook">
-          <img src="../character/instagram.svg" alt="instagram">
-          <img src="../character/youtube.svg" alt="youtube">
-          <img src="../character/mastercard.svg" alt="messenger">
-          <img src="../character/x-twitter.svg" alt="x">
+          <img src="../assets/images/facebook.svg" alt="facebook">
+          <img src="../assets/images/instagram.svg" alt="instagram">
+          <img src="../assets/images/youtube.svg" alt="youtube">
+          <img src="../assets/images/mastercard.svg" alt="messenger">
+          <img src="../assets/images/x-twitter.svg" alt="x">
         </div>
       </div>
 
@@ -485,8 +483,8 @@
           </div>
         </div>
         <div class="icon-socialnet">
-          <img src="../character/paypal.svg" alt="facebook">
-          <img src="../character/mastercard.svg" alt="instagram">
+          <img src="../assets/images/paypal.svg" alt="facebook">
+          <img src="../assets/images/mastercard.svg" alt="instagram">
         </div>
       </div>
     </div>
@@ -502,8 +500,8 @@
   </footer>
   </div>
 
-<script src="/js/user-register.js"></script>
-<script src="/js/Trang_chu.js"></script>
+<script src="../src/js/user-register.js"></script>
+<script src="../src/js/Trang_chu.js"></script>
 </body>
 
 </html>
