--- a/pages/user-san-pham1.html
+++ b/pages/user-san-pham1.html
@@ -4,16 +4,19 @@
     <title>Chi tiết sản phẩm</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/san-pham.css" />
-    <script src="../js/Trang_chu.js"></script>
+    <link rel="stylesheet" href="../src/css/san-pham.css" />
+    <script src="../src/js/Trang_chu.js"></script>
 
-    <link rel="stylesheet" href="../asset/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="../asset/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css"
+      href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/main.js"></script>
+    <link
+      rel="stylesheet"
+      href="../assets/libs/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css"
+    />
+    <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/js/main.js"></script>
   </head>
 
   <body>
@@ -35,7 +38,7 @@
                 />
                 <button class="btn">
                   <img
-                    src="../character/search.svg"
+                    src="../assets/images/search.svg"
                     style="position: relative; top: -15%"
                     alt="search"
                   />
@@ -147,12 +150,12 @@
 
               <div class="cart-icon">
                 <a href="gio-hang.html"
-                  ><img src="../character/cart.svg" alt="cart"
+                  ><img src="../assets/images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="../character/user.svg" alt=""
+                  ><img src="../assets/images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -325,7 +328,10 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="../index.html"
-              ><img class="img-fluid" src="../img/LOGO-2.png" alt="LOGO"
+              ><img
+                class="img-fluid"
+                src="../assets/images/LOGO-2.png"
+                alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -333,12 +339,7 @@
         <div class="choose">
           <ul>
             <li>
-              <a
-                href="../index.html"
-                ```````````````````````````````````````````
-                style="font-weight: bold"
-                >Trang chủ</a
-              >
+              <a href="../index.html" style="font-weight: bold">Trang chủ</a>
             </li>
             <li><a href="#">Giới thiệu</a></li>
             <li>
@@ -386,7 +387,7 @@
     <!-- SECTION  -->
     <div class="section">
       <div class="img-21">
-        <img src="../img/CAY21.jpg" alt="CAY21" />
+        <img src="../assets/images/CAY21.jpg" alt="CAY21" />
       </div>
     </div>
 
@@ -394,7 +395,7 @@
     <div class="sanpham">
       <!-- ảnh sản phẩm -->
       <img
-        src="../img/CAY5.jpg"
+        src="../assets/images/CAY5.jpg"
         alt="Cayphattai"
         width="100%"
         class="single-image"
@@ -422,7 +423,7 @@
             <span class="minus">-</span>
             <span class="num">01</span>
             <span class="plus">+</span>
-            <script src="../js/san-pham.js"></script>
+            <script src="../src/js/san-pham.js"></script>
           </div>
           <button type="button" class="btn btn-primary btn-lg">
             Thêm vào giỏ hàng
@@ -442,7 +443,7 @@
       />
       <h3>MÔ TẢ</h3>
       <p>
-        Cây Phát Tài bộ còn được biết đến với tên gọi khác là cây thiết mộc lan,
+        Cây Phát Tài bộ còn được biết đến với tên gọi khác là cây thiết mộc lan,
         là một loại cây cảnh phổ biến được nhiều người yêu thích bởi vẻ đẹp
         thanh tao, sang trọng và ý nghĩa phong thủy tốt đẹp. Cây có tên khoa học
         là Dracaena fragrans, thuộc họ Dracaenaceae. Cây có nguồn gốc từ Tây
@@ -466,7 +467,7 @@
     <footer>
       <div class="col-01">
         <div class="row-1">
-          <img src="../img/LOGO-2.png" alt="Logo final" />
+          <img src="../assets/images/LOGO-2.png" alt="Logo final" />
         </div>
 
         <div class="row-2">
@@ -496,11 +497,11 @@
           </div>
 
           <div class="icon-socialnet">
-            <img src="../character/facebook.svg" alt="facebook" />
-            <img src="../character/instagram.svg" alt="instagram" />
-            <img src="../character/youtube.svg" alt="youtube" />
-            <img src="../character/mastercard.svg" alt="messenger" />
-            <img src="../character/x-twitter.svg" alt="x" />
+            <img src="../assets/images/facebook.svg" alt="facebook" />
+            <img src="../assets/images/instagram.svg" alt="instagram" />
+            <img src="../assets/images/youtube.svg" alt="youtube" />
+            <img src="../assets/images/mastercard.svg" alt="messenger" />
+            <img src="../assets/images/x-twitter.svg" alt="x" />
           </div>
         </div>
 
@@ -513,8 +514,8 @@
             </div>
           </div>
           <div class="icon-socialnet">
-            <img src="../character/paypal.svg" alt="facebook" />
-            <img src="../character/mastercard.svg" alt="instagram" />
+            <img src="../assets/images/paypal.svg" alt="facebook" />
+            <img src="../assets/images/mastercard.svg" alt="instagram" />
           </div>
         </div>
       </div>
@@ -530,6 +531,6 @@
       </div>
       <!-- xong footer  -->
     </footer>
-    <script src="../asset/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
