them tinh nang tim kiem nâng cao

--- a/pages/phan-loai3.html
+++ b/pages/phan-loai3.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="../assets/icon/fontawesome-free-6.7.2-web/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../src/css/search-styles.css" />
 
     <link
       rel="stylesheet"
@@ -16,6 +21,7 @@
     />
     <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
+    <script src="../src/js/search-common.js"></script>
     <title>Phân loại</title>
   </head>
 
