--- a/index.html
+++ b/index.html
@@ -31,28 +31,163 @@
             <div class="aaa"></div>
             <div class="item-header">
               <div class="search-group">
-                <input
-                  type="search"
-                  placeholder="Tìm kiếm..."
-                  id="searchInput"
-                  style="position: relative; left: 15%"
-                  oninput="filterProducts02()"
-                  onkeydown="handleSearchEnter(event)"
-                />
-                <button class="btn">
-                  <img
-                    src="./assets/images/search.svg"
-                    style="position: relative; top: -15%"
-                    alt="search"
-                  />
-                </button>
+                <div class="search-container">
+                  <div class="search-input-wrapper">
+                    <input
+                      type="search"
+                      placeholder="Tìm kiếm sản phẩm..."
+                      id="searchInput"
+                      class="search-input"
+                    />
+                    <button
+                      class="advanced-search-toggle"
+                      onclick="toggleAdvancedSearch()"
+                      title="Tìm kiếm nâng cao"
+                    >
+                      <i class="fas fa-sliders-h"></i>
+                    </button>
+                    <button
+                      type="button"
+                      class="search-button"
+                      onclick="performSearch()"
+                      title="Tìm kiếm"
+                    >
+                      <i class="fas fa-search"></i>
+                    </button>
+                  </div>
+                </div>
 
+                <!-- Form tìm kiếm nâng cao được thiết kế lại -->
                 <div
-                  class="product-list"
-                  id="productList"
-                  onclick="window.location.href='./pages/user-san-pham1.html';"
+                  id="advancedSearchForm"
+                  class="advanced-search-panel"
+                  style="display: none"
                 >
-                  <div class="product">
+                  <div class="advanced-search-header">
+                    <h5>Tìm kiếm nâng cao</h5>
+                    <button
+                      type="button"
+                      class="close-advanced-search"
+                      onclick="toggleAdvancedSearch()"
+                    >
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+
+                  <div class="search-filter-container">
+                    <div class="filter-group">
+                      <label for="categoryFilter">
+                        <i class="fas fa-leaf"></i> Phân loại sản phẩm
+                      </label>
+                      <select id="categoryFilter" class="form-select">
+                        <option value="">Tất cả phân loại</option>
+                        <option value="cay-de-cham">Cây dễ chăm</option>
+                        <option value="cay-van-phong">Cây văn phòng</option>
+                        <option value="cay-de-ban">Cây để bàn</option>
+                        <option value="cay-duoi-nuoc">Cây dưới nước</option>
+                      </select>
+                    </div>
+
+                    <div class="filter-group">
+                      <label for="priceRange">
+                        <i class="fas fa-tag"></i> Khoảng giá
+                      </label>
+                      <div class="price-range-slider">
+                        <div class="price-input-group">
+                          <input
+                            type="number"
+                            id="minPrice"
+                            placeholder="Từ"
+                            min="0"
+                          />
+                          <span class="price-separator">-</span>
+                          <input
+                            type="number"
+                            id="maxPrice"
+                            placeholder="Đến"
+                            min="0"
+                          />
+                        </div>
+                        <div class="price-ranges">
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(0, 200000)"
+                          >
+                            Dưới 200k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(200000, 500000)"
+                          >
+                            200k - 500k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(500000, 1000000)"
+                          >
+                            500k - 1tr
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(1000000, 0)"
+                          >
+                            Trên 1tr
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="filter-actions">
+                      <button
+                        type="button"
+                        class="btn-search"
+                        onclick="performSearch()"
+                      >
+                        <i class="fas fa-search"></i> Tìm kiếm
+                      </button>
+                      <button
+                        type="button"
+                        class="btn-reset"
+                        onclick="resetFilters()"
+                      >
+                        <i class="fas fa-redo-alt"></i> Đặt lại
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="search-tips">
+                    <p>
+                      <i class="fas fa-lightbulb"></i> Mẹo: Kết hợp nhiều điều
+                      kiện để tìm kiếm chính xác hơn
+                    </p>
+                  </div>
+                </div>
+
+                <div id="productList" class="product-list">
+                  <!-- Thêm div thông báo không tìm thấy sản phẩm -->
+                  <div
+                    id="noResultsMessage"
+                    class="no-results-message"
+                    style="display: none"
+                  >
+                    <i class="fas fa-search"></i>
+                    <p>
+                      Không tìm thấy sản phẩm phù hợp với điều kiện tìm kiếm
+                    </p>
+                    <button
+                      type="button"
+                      class="btn-reset-search"
+                      onclick="resetFilters()"
+                    >
+                      <i class="fas fa-redo-alt"></i> Đặt lại bộ lọc
+                    </button>
+                  </div>
+
+                  <div class="product" data-category="cay-de-cham">
                     <img src="./assets/images/CAY5.jpg" alt="Cây phát tài" />
                     <div class="p-details">
                       <h2>Cây phát tài</h2>
@@ -61,7 +196,7 @@
                   </div>
 
                   <!-- OK  -->
-                  <div class="product">
+                  <div class="product" data-category="cay-van-phong">
                     <img src="./assets/images/CAY6.jpg" alt="Cây kim ngân" />
                     <div class="p-details">
                       <h2>Cây kim ngân</h2>
@@ -69,7 +204,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY7.jpg" alt="Cây trầu bà" />
                     <div class="p-details">
                       <h2>Cây trầu bà</h2>
@@ -77,7 +212,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-duoi-nuoc">
                     <img src="./assets/images/CAY8.jpg" alt="Cây lan chi" />
                     <div class="p-details">
                       <h2>Cây lan chi</h2>
@@ -85,7 +220,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                     <div class="p-details">
                       <h2>Cây trầu bà đỏ</h2>
@@ -93,7 +228,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                     <div class="p-details">
                       <h2>Cây lưỡi hổ</h2>
@@ -101,7 +236,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img
                       src="./assets/images/CAY11.jpg"
                       alt="Cây lưỡi hổ vàng"
@@ -112,7 +247,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                     <div class="p-details">
                       <h2>Cây hạnh phúc</h2>
@@ -120,7 +255,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img
                       src="./assets/images/CAY13.jpg"
                       alt="Cây trầu bà châu lớn"
@@ -131,7 +266,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-van-phong">
                     <img
                       src="./assets/images/CAY14.jpg"
                       alt="Cây phát tài DORADO"
@@ -141,7 +276,7 @@
                       <h3>220.000 vnđ</h3>
                     </div>
                   </div>
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                     <div class="p-details">
                       <h2>Cây vạn lộc</h2>
@@ -149,7 +284,7 @@
                     </div>
                   </div>
 
-                  <div class="product">
+                  <div class="product" data-category="cay-de-ban">
                     <img src="./assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                     <div class="p-details">
                       <h2>Cây ngọc vừng</h2>
@@ -669,5 +804,31 @@
       </div>
       <!-- xong footer  -->
     </footer>
+
+    <!-- Đối với tìm kiếm trên mobile -->
+    <div class="mobile-search-container">
+      <input
+        class="form-control"
+        type="text"
+        placeholder="Tìm kiếm"
+        id="mobileSearchInput"
+        aria-label="Search"
+      />
+      <!-- Đặt nút tìm kiếm nâng cao trước, nút search sau -->
+      <button
+        type="button"
+        class="btn-toggle-search"
+        onclick="toggleMobileAdvancedSearch()"
+      >
+        <i class="fas fa-sliders-h"></i>
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-success"
+        onclick="performSearch('mobileSearchInput')"
+      >
+        <i class="fas fa-search"></i>
+      </button>
+    </div>
   </body>
 </html>
